add fontawesome, forms wip [#135783723]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,8 @@
 // @import "modules/fonts"; // TODO uncomment when have fonts
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 // @import "helpers/variables"; included in bootstrap_custom
 @import "helpers/mixins";
 @import "helpers/helper_classes";
