--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -33,6 +33,6 @@ label {
   font-size: rem(18);
   line-height: 1;
 }
-.input-wrapper--show-hide .glyphicon {
-  top: 3px;
+.input-wrapper--show-hide .fa {
+  margin-right: -5px;
 }
