--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -4,7 +4,8 @@
 
 .row.admin__actions
   .col-sm-12
-    = link_to link_to 'Add a User', new_admin_user_path, class: 'btn btn-primary'
+    = link_to 'Invite One User', new_admin_user_path, class: 'btn btn-primary'
+    = link_to 'Import Multiple Users', new_admin_user_import_path, class: 'btn btn-primary'
 
 .row
   .col-md-12
