--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -39,8 +39,8 @@
             %td= user.activation_token_expires_at&.strftime("%-m/%-d/%Y")
             %td
               - unless user.active?
-                = link_to 'Resend Invitation', resend_invitation_admin_user_path(user), class: 'btn btn-default btn-xs', method: :post
+                = link_to 'Resend Invitation', resend_invitation_admin_user_path(user, context_params), class: 'btn btn-default btn-xs', method: :post
               = link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-default btn-xs'
-              = link_to 'Delete', [:admin, user], :method => :delete, :data => { :confirm => "Are you sure you want to delete this account?" }, class: 'btn btn-danger btn-xs'
+              = link_to 'Delete', admin_user_path(user, context_params), :method => :delete, :data => { :confirm => "Are you sure you want to delete this account?" }, class: 'btn btn-danger btn-xs'
 
     = paginate @users
