--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -22,7 +22,7 @@
     %footer
       .container-fluid
         .row(style="text-align: center;")
-          = link_to image_tag('logo-full-size.png', height: 150), root_path
+          = link_to image_tag('icons/logo-full-size.png', height: 150), root_path
 
     = render 'pjax_modal_frame'
     = yield :page_js
