--- a/app/views/password_reset_requests/new.haml
+++ b/app/views/password_reset_requests/new.haml
@@ -5,7 +5,7 @@
 
       %p Enter your email address below and we will send you instructions for resetting your password.
 
-      = simple_form_for @password_reset_request do |form|
+      = simple_form_for @password_reset_request, html: {data: {submits_to_pjax_modal: true}} do |form|
         .form-inputs
           = form.input :email, label: 'Email Address'
 
