--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -6,11 +6,11 @@
           .navbar-brand.wrapt-logo{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt", root_path
         
         %ul.nav.navbar-nav.navbar-right
-          - if current_user
+          - if current_user && current_user.active?
             %li= link_to "My Account", my_account_path
-          - if current_user&.admin?
-            %li= link_to "Admin", admin_root_path
-          - if current_user
+            - if current_user&.admin?
+              %li= link_to "Admin", admin_root_path
             %li= link_to "Sign Out", user_session_path, method: :delete
           - else
+            %li= link_to 'Science of Gifting', '#'
             %li= link_to 'Sign In', new_user_session_path
