--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -10,7 +10,9 @@
             %li= link_to "My Account", my_account_path
             - if current_user&.admin?
               %li= link_to "Admin", admin_root_path
-            %li= link_to "Sign Out", user_session_path, method: :delete
           %li= link_to 'Science of Gifting', '#'
-          - if !current_user
+          - if current_user
+            %li= link_to "Sign Out", user_session_path, method: :delete
+          - else
             %li= link_to 'Sign In', new_user_session_path, data: {loads_in_pjax_modal: true}
+            
