Survey Introduction Text

--- a/app/views/admin/survey_sections/_form.html.haml
+++ b/app/views/admin/survey_sections/_form.html.haml
@@ -3,6 +3,8 @@
 
   .form-inputs
     = f.input :name
+    = f.input :introduction_heading
+    = f.input :introduction_text
 
   .form-actions
     = f.button :submit, "Save"
