basic single select multiple choice

--- a/app/views/survey_question_responses/show.html.haml
+++ b/app/views/survey_question_responses/show.html.haml
@@ -14,7 +14,7 @@
 
       %h3= @question_response.survey_question.prompt
 
-      = simple_form_for @question_response, url: profile_survey_question_path(@profile, @survey_response, @question_response) do |form|
+      = simple_form_for @question_response, url: profile_survey_question_path(@profile, @survey_response, @question_response), html: {data: {behavior: 'question-response-form'}} do |form|
 
         = render response_fields_partial, form: form
 
