--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -1,4 +1,10 @@
-%p TODO multiple choice
+= form.input :survey_question_option_id, as: :hidden, input_html: {data: {behavior: 'option-id-input-field'}}
 
--# replace me with real form fields-- just in there to get it working with stubs
-= form.input :id, as: 'hidden'
+- @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
+  .row.option-row
+    - option_row.each do |option|
+      = link_to option.text, '#', class: 'btn btn-lg btn-default question_response__multiple_choice_button', data: {behavior: 'option-button', option_id: option.id}
+
+- content_for :page_js do
+  :javascript
+    new App.MultipleChoiceSingleSelector()
