start text question styles

--- a/app/views/survey_question_responses/_text_fields.haml
+++ b/app/views/survey_question_responses/_text_fields.haml
@@ -2,3 +2,5 @@
 
 -# replace me with real form fields-- just in there to get it working with stubs
 = form.input :id, as: 'hidden'
+
+= form.input :text_response
