--- a/app/views/admin/survey_question_options/edit.html.haml
+++ b/app/views/admin/survey_question_options/edit.html.haml
@@ -1,6 +1,7 @@
 = simple_form_for  [:admin, @survey_question_option], url: admin_survey_question_option_path(@survey, @survey_question, @survey_question_option), remote: true, html: {data: {type: 'html', class: 'form form-inline', edit_option_form: true}} do |form|
 
-  = form.input :text, label: false, as: :string, input_html: {class: 'input-sm'}
+  = form.input :text, label: 'Display Text', as: :string, input_html: {class: 'input-sm'}
+  = form.input :explanation, label: 'Expanatory Text (shown when selected)', class: 'input-sm'
   = form.submit "Save", class: 'btn btn-sm'
 
 - content_for :page_js do
