--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -1,6 +1,76 @@
-.sqr__container {
+.sqr-container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.sqr-container__header {
+  text-align: center;
+}
+
+.sqr-question__container {
+  position: relative;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
   -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
 }
+
+.sqr-progress-bar {
+  width: 100%;
+  height: 8px;
+}
+
+.sqr-progress-bar__progress {
+  height: 100%;
+  background-color: $blue-001;
+}
+
+.sqr-previous__link {
+  width: 40px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  margin-top: -50px;
+  margin-left: -40px;
+  display: table;
+}
+
+.sqr-previous__icon {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.sqr-previous__sudo-link {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgba($blue-001, 0.1);
+  z-index: -1;
+  top: 0px;
+  left: 0px;
+}
+
+.sqr-previous__link:hover {
+  width: 50px;
+  margin-left: -50px;
+}
+
+.sqr-form label {
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.sqr-submit__container {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+.sqr-submit__btn {
+  margin-bottom: -24px;
+}
+
+
