--- a/app/views/survey_question_responses/_text_fields.haml
+++ b/app/views/survey_question_responses/_text_fields.haml
@@ -1,6 +1,4 @@
-%p TODO Text
-
 -# replace me with real form fields-- just in there to get it working with stubs
 = form.input :id, as: 'hidden'
 
-= form.input :text_response
+= form.input :text_response, label: label
