--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -5,3 +5,157 @@
   margin-bottom: 20px;
   color: $gray-008;
 }
+
+// styles for simple form input wrapt_range
+.wrapt-range__container {
+  
+  // START remove styles range inputs in all browsers
+  input[type=range] {
+    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+    width: 100%; /* Specific width is required for Firefox. */
+    background: transparent; /* Otherwise white in Chrome */
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+  }
+
+  input[type=range]:focus {
+    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+  }
+
+  input[type=range]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+    /* Hides the slider so custom styles can be added */
+    background: transparent; 
+    border-color: transparent;
+    color: transparent;
+  }
+  // END remove styles range inputs in all browsers
+
+  // START style the thumb
+
+  // Special styling for WebKit
+  // Note: can't comma-separate these type of selectors. Browsers will drop the entire selector if it doesn't understand a part of it
+  
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    margin-top: -13.5px; 
+    // You need to specify a margin in Chrome, but in Firefox and IE it is automatic
+  }
+
+  // WebKit
+  // Firefox
+  // IE
+  input[type=range]::-webkit-slider-thumb {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    background: $blue-001;
+    cursor: pointer;
+  } 
+  input[type=range]::-moz-range-thumb {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    background: $blue-001;
+    cursor: pointer;
+  } 
+  input[type=range]::-ms-thumb {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    background: $blue-001;
+    cursor: pointer;
+  }
+
+  // END style the thumb
+
+  // START style the track
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    background: transparent;
+    border-radius: 5px;
+    border: 1px solid $gray-002;
+    margin-bottom: 13.5px;
+  }
+
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  }
+
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    background: transparent;
+    border-radius: 5px;
+    border: 1px solid $gray-002;
+    margin-bottom: 13.5px;
+  }
+
+  input[type=range]:focus::-moz-range-track {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  }
+
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+  }
+
+  input[type=range]::-ms-fill-lower {
+    background: transparent;
+    border: 1px solid $gray-002;
+    border-radius: 5px;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  }
+
+  input[type=range]::-ms-fill-upper {
+    background: transparent;
+    border: 1px solid $gray-002;
+    border-radius: 5px;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  }
+  // END style the track
+
+}
+
+.wrapt-range__labels {
+  width: 100%;
+  height: 25px;
+  position: relative;
+}
+
+.wrapt-range__label {
+  display: inline-block;
+}
+
+.wrapt-range__min-label {
+  position: absolute;
+  left: 0px;
+}
+
+.wrapt-range__max-label {
+  position: absolute;
+  right: 0px;
+}
