style adjustments - typography, page layout styles [#135783723]

--- a/app/assets/stylesheets/helpers/_helper_classes.scss
+++ b/app/assets/stylesheets/helpers/_helper_classes.scss
@@ -7,8 +7,14 @@
 .bg-gray-003 {
   background-color: $gray-003;
 }
+.bg-gray-004 {
+  background-color: $gray-004;
+}
 .bg-gray-005 {
   background-color: $gray-005;
+}
+.bg-gray-006 {
+  background-color: $gray-006;
 }
 .bg-gray-007 {
   background-color: $gray-007;
@@ -51,4 +57,7 @@
 }
 .bg-red-001 {
   background-color: $red-001;
+}
+.tan-002 {
+  color: $tan-002;
 }
