--- a/app/views/style_guides/main.haml
+++ b/app/views/style_guides/main.haml
@@ -155,32 +155,44 @@
         .div.bg-gray-001.placeholder-block
         $gray-001
         %br
-        \#f4f6f6 lightest
+        \#F8F9FB
     .col-xs-2
       .pb2
         .div.bg-gray-002.placeholder-block
         $gray-002
         %br
-        \#e9ecec
+        \#f4f6f6
     .col-xs-2
       .pb2
         .div.bg-gray-003.placeholder-block
         $gray-003
         %br
-        \#95989f
+        \#E9ECEC
+    .col-xs-2
+      .pb2
+        .div.bg-gray-004.placeholder-block
+        $gray-004
+        %br
+        \#E2E2E2 border gray
     .col-xs-2
       .pb2
         .div.bg-gray-005.placeholder-block
         $gray-005
         %br
-        \#808184 help text
+        \#C4C4C4
+    .col-xs-2.col-xs-offset-1
+      .pb2
+        .div.bg-gray-006.placeholder-block
+        $gray-006
+        %br
+        \#95989f help text
     .col-xs-2
       .pb2
         .div.bg-gray-007.placeholder-block
         $gray-007
         %br
-        \#6d6e70
-    .col-xs-2.col-xs-offset-1
+        \#767676
+    .col-xs-2
       .pb2
         .div.bg-gray-008.placeholder-block
         $gray-008
@@ -191,7 +203,7 @@
         .div.bg-gray-010.placeholder-block
         $gray-010
         %br
-        \#1b1c1c
+        \#333
     .col-xs-2
       .pb2
         .div.bg-black.placeholder-block
@@ -203,7 +215,7 @@
       .div.bg-blue-001.placeholder-block
       $blue-001
       %br
-      #91A7CE lightest, logo border
+      #91A7CE logo border
     .col-xs-2
       .div.bg-blue-002.placeholder-block
       $blue-002
