--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -5,29 +5,31 @@ $bootstrap-sass-asset-helper: false !default;
 
 
 //== Colors
-$gray-001: rgb(244, 246, 246); // #f4f6f6 lightest
-$gray-002: rgb(233, 236, 236); // #e9ecec
-$gray-003: rgb(149, 152, 159); // #95989f
-$gray-005: rgb(128, 129, 132); // #808184 help text
-$gray-007: rgb(109, 110, 112); // #6d6e70
+$gray-001: rgb(248, 249, 251); // #F8F9FB
+$gray-002: rgb(244, 246, 246); // #f4f6f6 lightest
+$gray-003: rgb(236, 236, 236); // #E9ECEC
+$gray-004: rgb(226, 226, 226); // #E2E2E2 border gray
+$gray-005: rgb(196, 196, 196); // #C4C4C4
+$gray-006: rgb(149, 152, 159); // #95989f help text
+$gray-007: rgb(118, 118, 118); // #767676
 $gray-008: rgb(77, 76, 77); // #4d4c4d
-$gray-010: rgb(27, 28, 28); // #1b1c1c
+$gray-010: rgb(51, 51, 51); // #333
 $black: #000;
 
-$blue-001: rgb(145, 167, 206); // #91A7CE lightest, logo border (used for 90a5cd)
+$blue-001: rgb(145, 166, 205); // #91A6CD lightest, logo border (used for 90a5cd)
 $blue-002: rgb(113, 145, 193); // #7191c1
-$blue-003: rgb(22, 80, 151); // #165097
-$blue-004: rgb(163, 190, 229); // #a3bee5
+$blue-003: rgb(52, 87, 139); // #34578B
+$blue-004: rgb(171, 186, 213); // #ABBAD5
 
-$tan-001: rgb(241, 223, 209); // #f1dfd1
-$tan-002: rgb(197, 170, 128); // #c5aa80
+$tan-001: rgb(242, 221, 209); // #F2DDD1
+$tan-002: rgb(196, 170, 127); // #C4AA7F
 
-$orange-001: rgb(247, 154, 111); // #f79a6f
+$orange-001: rgb(247, 153, 112); // #F79970
 
-$green-001: rgb(191, 231, 158); // #bfe79e
-$green-002: rgb(41, 180, 115); // #29b473
+$green-001: rgb(191, 232, 158); // #BFE89E
+$green-002: rgb(41, 180, 115); // #29B473
 
-$red-001: rgb(235, 103, 103); // #eb6767
+$red-001: rgb(235, 103, 103); // #EB6767
 
 // Z-index scale
 $zIndex-1:   100;
@@ -78,7 +80,7 @@ $link-color:            $blue-001 !default;
 //** Link hover color set via `darken()` function.
 $link-hover-color:      $blue-003 !default;
 //** Link hover decoration.
-$link-hover-decoration: none !default;
+$link-hover-decoration: underline !default;
 
 
 //== Typography
@@ -407,12 +409,12 @@ $container-lg:                 $container-large-desktop !default;
 $navbar-height:                    104px !default;
 $navbar-margin-bottom:             60px !default;
 $navbar-border-radius:             $border-radius-base !default;
-$navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
+$navbar-padding-horizontal:        10px !default;
 $navbar-padding-vertical:          38px !default;
 $navbar-collapse-max-height:       340px !default;
 
 $navbar-default-color:             $gray-008 !default;
-$navbar-default-bg:                #fff !default;
+$navbar-default-bg:                transparent !default;
 $navbar-default-border:            $blue-001 !default;
 
 // Navbar links
