--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -6,19 +6,20 @@ html {
 body {
   margin-bottom: 120px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  height: 120px;
-  width: 100%;
-  margin-top: 45px;
-}
+// .footer {
+//   position: absolute;
+//   bottom: 0;
+//   height: 120px;
+//   width: 100%;
+//   margin-top: 45px;
+// }
 footer ul {
   list-style: none;
   display: block;
   text-align: center;
   width: 100%;
   margin-bottom: 0;
+  @extend .help;
 }
 footer li {
   display: inline-block;
