--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,8 +1,12 @@
-.wrapper--full-bleed__bg-01.pb4.pt3
+.pb4.pt3
   .container
     .row
       .col-xs-12
         .table-display
           %ul
             %li
-              Wrapt 2016
+              2017 Wrapt All Rights Reserved
+            %li
+              Privacy Policy
+            %li
+              Terms &amp; Conditions
