--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,6 +9,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    = svg 'symbol-defs'
     -# responsive is disabled so use .col-xs-* everywhere for bs columns
     .wrapper--full-bleed__bg-03.pb6
       - if show_top_nav?
