--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,6 +8,7 @@
     = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = render 'layouts/favicons'
   %body
     = svg 'symbol-defs'
     -# responsive is disabled so use .col-xs-* everywhere for bs columns
