fix two favicon links

--- a/app/views/layouts/_favicons.haml
+++ b/app/views/layouts/_favicons.haml
@@ -1,5 +1,5 @@
-= favicon_link_tag 'favicon.ico', rel: 'shortcut'
-= favicon_link_tag 'favicon.ico', rel: 'icon'
+%link{:href => image_path("favicons/favicon.ico"), rel: 'shortcut'}
+%link{:href => image_path("favicons/favicon.ico"), rel: 'icon'}
 %link{:href => image_path("favicons/apple-touch-icon.png"), :rel => "apple-touch-icon", :sizes => "180x180"}/
 %link{:href => image_path("favicons/favicon-32x32.png"), :rel => "icon", :sizes => "32x32", :type => "image/png"}/
 %link{:href => image_path("favicons/favicon-16x16.png"), :rel => "icon", :sizes => "16x16", :type => "image/png"}/
