--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -8,6 +8,7 @@
 }
 
 .sqr-question__container {
+  margin-bottom: 100px;
   position: relative;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
@@ -15,14 +16,9 @@
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
 }
 
-.sqr-progress-bar {
-  width: 100%;
-  height: 8px;
-}
-
-.sqr-progress-bar__progress {
-  height: 100%;
-  background-color: $blue-001;
+.sqr-progress {
+  border-bottom: 6px solid $blue-001;
+  width: 120px;
 }
 
 .sqr-previous__link {
@@ -72,5 +68,72 @@
 .sqr-submit__btn {
   margin-bottom: -24px;
 }
+
+.sqr-section-progress-bar {
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.sqr-section-icon__container {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+}
+
+.sqr-section-icon__outer {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  text-align: center;
+  padding: 10%;
+  border: 1px solid $gray-003;
+}
+
+.sqr-section-icon__inner {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: $blue-001;
+  border: 1px solid $gray-003;
+}
+
+.sqr-section-progress__container {
+  border-radius: 5px;
+  border: 1px solid $gray-002;
+  background-color: #FFFFFF;
+  margin-bottom: 10px;
+}
+
+.sqr-sections__left,
+.sqr-sections__right {
+  width: 50%;
+  float: left;
+}
+
+.sqr-sections__right {
+  text-align: right;
+}
+
+.sqr-section {
+  height: 6px;
+  padding: 2px 4px;
+  float: left;
+}
+
+.sqr-section__label {
+  float: left;
+}
+
+.sqr-section__progress {
+  height: 100%;
+  background-color: red;
+}
+
 
 
