quiz complete styles

--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -82,3 +82,8 @@ a:active {
 a:active {
   text-decoration: none;
 }
+
+.wrapt-highlight-text {
+  background-color: rgba(196, 210, 233, .2);
+  color: $blue-001;
+}
