--- a/app/assets/stylesheets/modules/_grid.scss
+++ b/app/assets/stylesheets/modules/_grid.scss
@@ -11,6 +11,13 @@
   border: 1px solid #E2E2E2;
 }
 
+.floating-container {
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+}
+
 // When it's time to make the site responsive:
 // 1. Remove inclusion of this file in /app/assets/stylesheets/modules/modules
 // 2. Add .nav-collapse to <nav> 
