--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -10,10 +10,6 @@
 .sqr-question__container {
   margin-bottom: 100px;
   position: relative;
-  background-color: #FFFFFF;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
 }
 
 .sqr-progress {
@@ -41,7 +37,7 @@
 .sqr-previous__sudo-link {
   position: absolute;
   width: 100px;
-  height: 100px;
+  height: 100%;
   border-radius: 50%;
   background-color: rgba($blue-001, 0.1);
   z-index: -1;
@@ -52,6 +48,8 @@
 .sqr-previous__link:hover {
   width: 50px;
   margin-left: -50px;
+  background-color: transparent;
+  height: 105px;
 }
 
 .sqr-form label {
@@ -139,7 +137,7 @@
 
 .sqr-section__progress {
   height: 100%;
-  background-color: #F0E4B6;
+  background-color: $tan-002;
 }
 
 
