use giftee name in survey

--- a/app/views/survey_question_responses/show.html.haml
+++ b/app/views/survey_question_responses/show.html.haml
@@ -20,7 +20,7 @@
 
           = simple_form_for @question_response, url: profile_survey_question_path(@profile, @survey_response, @question_response), html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
 
-            = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
+            = render response_fields_partial, form: form, label: @question_response.survey_question.prompt_with_name(@survey_response)
             .sqr-submit__container.pr3.text-right
               = form.submit question_response_next_button_text, class: 'btn btn-primary sqr-submit__btn', data: {behavior: 'next-question-button'}
 
