--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -2,13 +2,13 @@
   .row
     .col-xs-12
       .pa3.text-center
-        %h1 Great Job! We’ve got all the information we need to make gift recommendations for TODO Gift recipient's name
+        %h1 Great Job! We’ve got all the information we need to make gift recommendations for #{@survey_response.giftee_name}
         %p.tan-002 A few more things to get squared away before we reveal the gifts
 
 
       = simple_form_for @survey_response_completion, url: profile_survey_completion_path(@profile, @survey_response) do |form|
         .floating-container.pa3
-          %h4 Invite TODO GIFT RECIPIENT NAME
+          %h4 Invite #{@survey_response.giftee_name}
           %p In our Beta Stage we are testing several aspects of our offering. One key piece is presenting you with the most accurate recommendations possible. In order to do that, we’d like to ask her to review the gift recommendations and rate some of the items in our catalog.
           .row
             .col-xs-6
