--- a/app/views/survey_question_responses/_multiple_choice_choose_many_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_choose_many_fields.haml
@@ -4,7 +4,7 @@
     = form.association :survey_question_options, as: :check_boxes, collection: [@question_response.survey_question.other_option], label_method: :text, input_html: {data: {behavior: 'option-id-input other-option'}}
 
 %label= label
-.small Select All That Apply
+.hint Select All That Apply
 - @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
   .row.option-row
     - option_row.each do |option|
